[package]
name = "annihilation"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Annihilative Keys"
readme = "README.md"
homepage = "https://github.com/jacobhaap/rs-annihilation"
repository = "https://gitlab.com/jacobhaap/rs-annihilation"
license = "MIT"
keywords = ["crypto", "proof-of-work", "kdf", "curve25519", "ed25519"]
categories = ["cryptography"]

[features]
default = []
convergent = ["ed25519-dalek"]
divergent = ["ed25519-dalek"]

[dependencies]
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.2.0", optional = true }
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2.6.1"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
hex-literal = "1.1.0"
