[package]
name = "annihilation"
version = "0.1.0-alpha.2"
description = """
Pure Rust implementation of Annihilative Keys, cryptographic key/antikey pairs
bound by proof-of-work and elliptic curve point relationships.
"""
authors = ["Jacob V. B. Haap"]
license = "MIT"
documentation = "https://docs.rs/annihilation"
homepage = "https://github.com/jacobhaap/rs-annihilation"
repository = "https://gitlab.com/jacobhaap/rs-annihilation"
keywords = ["crypto", "proof-of-work", "kdf", "curve25519"]
categories = ["cryptography"]
readme = "README.md"
edition = "2024"

[dependencies]
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.2.0", optional = true }
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2.6.1"
zeroize = { version = "1.8.2", features = ["derive"] }

[features]
default = []
convergent = ["ed25519-dalek"]
divergent = ["ed25519-dalek"]
